<resources>
    <string name="app_name">N214410101_EN</string>
    <string name="n1">Name</string>
    <string name="n2">Phone number</string>
    <string name="n3">Email</string>

    <string name="su">Confirm</string>
    <string name="ex">Exit</string>

    <string name="en">Large</string>
    <string name="sh">Exit</string>

    <string name="res">Result</string>

    <string name="exg">Exchange</string>
    <string name="us">USD</string>
    <string name="nt">NTD</string>
    <string name="u2n">YS2NT</string>
    <string name="n2u">NT2US</string>
    <string name="cls">Clear</string>

    <string name="err">Some field are missing!</string>
</resources>