<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- n1 -->
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/res" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n1" />

        <EditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="text"
            android:text="" />
    </LinearLayout>

    <!-- n2 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n2" />

        <EditText
            android:id="@+id/ed_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="phone"
            android:text="" />
    </LinearLayout>

    <!-- n3 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n3" />

        <EditText
            android:id="@+id/ed_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="5"
            android:text="" />
    </LinearLayout>

    <!-- 一般按鈕 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/b_su"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/su" />

        <Button
            android:id="@+id/b_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex" />

        <Button
            android:id="@+id/b_la"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en" />

        <Button
            android:id="@+id/b_sm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sh" />

    </LinearLayout>

    <!--  匯率  -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exg" />

        <!-- 匯率 -->
        <EditText
            android:id="@+id/ed_exg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:inputType="numberDecimal"
            android:text="" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/us" />

        <!-- 美金 -->
        <EditText
            android:id="@+id/ed_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:inputType="numberDecimal"
            android:text="" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nt" />

        <!-- 台幣 -->
        <EditText
            android:id="@+id/ed_nt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:inputType="numberDecimal"
            android:text="" />

    </LinearLayout>

    <!--  匯率按鈕  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_u2n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/u2n" />

        <Button
            android:id="@+id/b_n2u"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n2u" />

        <Button
            android:id="@+id/b_cls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cls" />

        <Button
            android:id="@+id/b_ex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex" />
    </LinearLayout>

    <!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/str"-->
<!--        android:textColor="#ff0000"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

</LinearLayout>